[package]
name = "rust-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bzip2 = "0.4.3"
# bzip2-rs = { version = "0.1.2", features = ["rustc_1_51"] }
bzip2-rs = { git = "https://github.com/paolobarbolini/bzip2-rs", features = ["rustc_1_55"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
